# sample_ipc

./: CMakeLists.txt
app/client/: CMakeLists.txt  main_client.cpp
app/sample_protobuf/: CMakeLists.txt  main.cpp
app/server/: CMakeLists.txt  main_server.cpp
include/Coconut/: Coconut.h
include/IPComm_backup/: IPCReader.h  IPCWriter.h  SharedData.h
include/Network/: SocketClient.h  SocketServer.h  test.cs
include/Parameter/: Parameter.h
include/Util/: file.h  network.h  pcl_utils.hpp  point_type.h  string.h  time.h
include/WebViz/: WebViz.h
include/Xml/: Xml.h  Xml.hpp
lib/IPComm/: CMakeLists.txt  IPCReader.cpp  IPCReader.h  IPCWriter.cpp  IPCWriter.h  SharedData.h  client.cs  main.cs  server.cs  umsg.pb.h
lib/IPComm/proto/: umsg.proto
refer/client/: CMakeLists.txt  main.cpp
refer/server/: CMakeLists.txt  main.cpp
